@@ -67,6 +67,8 @@ trailing_whitespace = 1
 [Test::MinimumVersion / @Author::KENTNL/Test::MinimumVersion]
 
 [Test::Compile::PerFile / @Author::KENTNL/Test::Compile::PerFile]
+:version = 0.003902
+test_template = 02-raw-require.t.tpl
 
 [Test::Perl::Critic / @Author::KENTNL/Test::Perl::Critic]
 
@@ -138,6 +140,7 @@ time_zone = UTC
 allow_dirty_match = ^lib/
 
 [Git::CommitBuild / @Author::KENTNL/Git::CommitBuild]
+branch = builds
 release_branch = releases
 
 [Git::Tag / @Author::KENTNL/tag_release]
@@ -191,7 +194,7 @@ Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
 Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
-Dist::Zilla::Plugin::Test::Compile::PerFile = 0
+Dist::Zilla::Plugin::Test::Compile::PerFile = 0.003902
 Dist::Zilla::Plugin::Test::EOL = 0
 Dist::Zilla::Plugin::Test::Kwalitee = 0
 Dist::Zilla::Plugin::Test::MinimumVersion = 0
