@@ -1,7 +1,14 @@
 Release history for Dist-Zilla-Plugin-Prereqs-Upgrade
 
 {{$NEXT}}
+ [Bugfix]
+ - Update tooling for .-in-@INC removal
+ - Closes https://github.com/kentnl/Dist-Zilla-Plugin-Prereqs-Upgrade/issues/1
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001000, see misc/*.deps* for details
+ - develop: +3 ↑2
+ - test: ↓1
 
 0.001000 2015-01-14T05:22:02Z e5e6b0c
  - First version.
-
